--- a/app/views/admin/site_steps/content.html.erb
+++ b/app/views/admin/site_steps/content.html.erb
@@ -15,7 +15,7 @@
 <%= Gon::Base.render_data %>
 
 <%= form_for @site, url: wizard_path, method: :put do |f| %>
-  <div class="l-site-creation -settings">
+  <div class="l-site-creation -content">
     <div class="wrapper">
 
       <div class="settings">
