--- a/app/views/admin/site_steps/template.html.erb
+++ b/app/views/admin/site_steps/template.html.erb
@@ -13,7 +13,7 @@
 <%= include_gon %>
 
 <%= form_for @site, url: wizard_path, method: :put do |f| %>
-  <div class="l-site-creation -style">
+  <div class="l-site-creation -template">
     <div class="wrapper">
 
       <div class="templates">
