--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -13,7 +13,7 @@
 <%= Gon::Base.render_data %>
 
 <%= form_for @site, url: wizard_path, html: { class: 'js-form' }, method: :put do |f| %>
-    <div class="l-site-creation -site-settings">
+    <div class="l-site-creation -settings">
       <div class="wrapper">
         <div class="settings c-inputs-container">
           <div class="container js-checkboxes">
