Improve the color selector

--- a/app/views/admin/site_steps/style.html.erb
+++ b/app/views/admin/site_steps/style.html.erb
@@ -18,7 +18,14 @@
       <div class="c-inputs-container">
         <div class="container">
           <%= f.fields_for :site_settings, (f.object.site_settings.select { |ss| ss.name == 'color' }) do |settings_form| %>
-            <div class="js-accent-color" color="<%= settings_form.object.value %>"></div>
+            <input type="hidden" id="accent-color_name" name="site[site_settings_attributes][0][name]" value="color">
+            <input type="hidden" id="accent-color_position" name="site[site_settings_attributes][0][position]" value="1">
+
+            <label for="accent-color_id">Accent color</label>
+            <div class="color-selector js-color-selector">
+              <input type="text" id="accent-color_id" name="site[site_settings_attributes][0][value]" value="<%= settings_form.object.value %>" required pattern="#[0-9a-fA-F]{6}">
+              <input type="color" value="<%= settings_form.object.value %>">
+            </div>
           <% end %>
         </div>
       </div>
