--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -219,6 +219,36 @@
         flex-grow: 1;
       }
     }
+
+    .color-selector {
+      display: flex;
+      align-items: stretch;
+      flex-grow: 1;
+      height: 40px;
+      border: 1px solid $color-13;
+      border-radius: 4px;
+
+      input[type="text"] {
+        flex-grow: 1;
+        padding: 0 35px 0 15px;
+        color: $color-4;
+        font-family: $content-font;
+        font-size: $font-size-normal;
+        line-height: 40px;
+        background: transparent;
+      }
+
+      input[type="color"] {
+        position: relative;
+        top: -1px;
+        right: -1px;
+        height: calc(100% + 2px);
+        flex-basis: 60px;
+        flex-shrink: 0;
+        border-radius: 4px;
+        overflow: hidden;
+      }
+    }
   }
 
   &.-content {
