Fix an issue with the styles of the selects

--- a/app/assets/stylesheets/components/shared/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/shared/c-inputs-container.scss
@@ -124,8 +124,8 @@
     select {
       width: 100%;
       margin: 0;
-      padding: 9px 35px 0 15px;
-      min-height: 40px;
+      padding: 0 35px 0 15px;
+      height: 40px;
       border: 1px solid $color-13;
       border-radius: 4px;
       color: $color-4;
