Fix bug with continue button on content page

--- a/app/views/admin/site_steps/content.html.erb
+++ b/app/views/admin/site_steps/content.html.erb
@@ -107,7 +107,7 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'footer', locals: { f: f, no_continue: !@site.persisted?, last_step: true } %>
+  <%= render partial: 'footer', locals: { f: f, no_continue: true, last_step: true } %>
 <% end %>
 
 
