Restore main_image on the content site page

--- a/app/views/admin/site_steps/content.html.erb
+++ b/app/views/admin/site_steps/content.html.erb
@@ -72,6 +72,11 @@
                 </div>
               </div>
 
+            <% when 'main_image' %>
+              <%= react_component('AdminCarousel', {
+                form: settings_form.object,
+              } ) %>
+
             <% when 'alternative_image' %>
               <%= settings_form.hidden_field :position, value: '6'%>
               <%= settings_form.hidden_field :name, value: 'alternative_image'%>
