--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -182,4 +182,11 @@
       <% end %>
     </div>
   </div>
+  <% if @header_country_colours.size > 0 %>
+    <div class="flag-border">
+      <% @header_country_colours.each do |colour| %>
+        <div style="background-color: <%= colour %>;"></div>
+      <% end %>
+    </div>
+  <% end %>
 </header>
