Update the Template step

--- a/app/views/admin/site_steps/template.html.erb
+++ b/app/views/admin/site_steps/template.html.erb
@@ -3,7 +3,7 @@
     <div class="wrapper">
       <div class="description">
         <h1>Template</h1>
-        <p>Choose one of the two templates below and its main color</p>
+        <p>Choose the general template of your site. If you pick the default template, you will be able to customize it in the next step.</p>
       </div>
     </div>
   </div>
