--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -101,6 +101,9 @@
             border: 1px solid $color-13;
             border-radius: 4px;
             width: 100%;
+            height: 170px;
+            object-fit: cover;
+            object-position: center;
           }
 
           p {
