--- a/app/views/management/dataset_steps/labels.html.erb
+++ b/app/views/management/dataset_steps/labels.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 
-<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @dataset.id, current_step: step, step_names: @steps_names} %>
+<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, resource: @dataset, current_step: step, step_names: @steps_names} %>
 <%= Gon::Base.render_data %>
 
 
