--- a/app/views/admin/user_steps/identity.html.erb
+++ b/app/views/admin/user_steps/identity.html.erb
@@ -9,7 +9,7 @@
   </div>
 <% end %>
 
-<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @user.id, current_step: step, step_names: @steps_names} %>
+<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, resource: @user, current_step: step, step_names: @steps_names} %>
 <%= Gon::Base.render_data %>
 
 <%= form_for @user, url: wizard_path, method: :put do |f| %>
