--- a/app/views/context_steps/title.html.erb
+++ b/app/views/context_steps/title.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @context.id, current_step: step, step_names: @steps_names} %>
+<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, resource: @context, current_step: step, step_names: @steps_names} %>
 <%= Gon::Base.render_data %>
 
 <%= form_for @context, url: wizard_path, method: :put do |f| %>
