--- a/app/views/management/page_steps/columns_selection.html.erb
+++ b/app/views/management/page_steps/columns_selection.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <%= render partial: 'shared/navigation_header', locals: \
-  {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
+  {form_steps: form_steps, resource: @page, current_step: step, step_names: @steps_names, \
   nvalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
 
 <%= Gon::Base.render_data %>
