--- a/app/views/management/page_steps/link.html.erb
+++ b/app/views/management/page_steps/link.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <%= render partial: 'shared/navigation_header', locals: \
-  {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
+  {form_steps: form_steps, resource: @page, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 
