--- a/app/views/management/page_steps/name.html.erb
+++ b/app/views/management/page_steps/name.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'shared/navigation_header', locals: \
-  {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
+  {form_steps: form_steps, resource: @page, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 
