--- a/app/views/management/page_steps/open_content_v2_preview.html.erb
+++ b/app/views/management/page_steps/open_content_v2_preview.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_pack_tag 'application' %>
 <%= render partial: 'shared/navigation_header', locals: \
-  {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
+  {form_steps: form_steps, resource: @page, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
 
 <div class="c-content">
