--- a/app/views/admin/site_steps/content.html.erb
+++ b/app/views/admin/site_steps/content.html.erb
@@ -72,11 +72,6 @@
                 </div>
               </div>
 
-            <% when 'main_image' %>
-              <%= react_component('AdminCarousel', {
-                form: settings_form.object,
-              } ) %>
-
             <% when 'alternative_image' %>
               <%= settings_form.hidden_field :position, value: '6'%>
               <%= settings_form.hidden_field :name, value: 'alternative_image'%>
@@ -105,10 +100,10 @@
                   </div>
                 </div>
               </div>
-
           <% end %>
         <% end %>
 
+        <%= react_component('AdminCarousel', {}) %>
       </div>
     </div>
   </div>
