--- a/app/views/site_page/map_report.html.erb
+++ b/app/views/site_page/map_report.html.erb
@@ -21,7 +21,7 @@
 
 
 <% content_for :external_js do %>
-  <script id="report-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/reportLib.<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
+  <script id="report-load" src="<%= ENV['MAP_BUILDER_BASE_URL'] %>/reportLib.<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
   <script>
     var mapDatabaseConfig = JSON.parse('<%= @map_content %>')
 
