--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -153,7 +153,7 @@
         <ul>
           <li class="notranslate js-language-selector"></li>
         </ul>
-        <% if @site_page.site_template.name != 'INDIA' && @site_page.site.site_settings.header_login_enabled(@site_page.site_id).value == 'true' %>
+        <% if @site_page.site_template.name != 'INDIA' && @site_page.header_login_enabled? %>
           <%= render 'front/user'%>
         <% end %>
       </div>
