feat(#169580379): Add info tooltip for accent color.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,6 +5,7 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag 'admin/application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <script src="https://unpkg.com/tippy.js@3.3.0/dist/tippy.all.min.js" defer></script>
   <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
   <%= favicon_link_tag %>
 </head>
