--- a/app/views/admin/site_steps/style.html.erb
+++ b/app/views/admin/site_steps/style.html.erb
@@ -21,7 +21,12 @@
             <input type="hidden" id="accent-color_name" name="site[site_settings_attributes][0][name]" value="color">
             <input type="hidden" id="accent-color_position" name="site[site_settings_attributes][0][position]" value="1">
 
-            <label for="accent-color_id">Accent color</label>
+            <label for="accent-color_id">
+              Accent color
+              <% #if !value[:description].blank? %>
+                <button type="button" class="info-button" data-tippy="<%= @site.site_settings.field_descriptions[:color] %>" data-tippy-interactive="true">Field information</button>
+              <% #end %>
+            </label>
             <div class="color-selector js-color-selector">
               <input type="text" id="accent-color_id" name="site[site_settings_attributes][0][value]" value="<%= settings_form.object.value %>" required pattern="#[0-9a-fA-F]{6}">
               <input type="color" value="<%= settings_form.object.value %>">
