feat(#169175168): Add button for style preview in site_steps footer.

--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -6,6 +6,9 @@
         <% unless local_assigns[:no_continue] %>
           <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
         <% end %>
+        <% if step == 'style' %>
+          <%= f.button Admin::SiteStepsController::PREVIEW, value: Admin::SiteStepsController::PREVIEW, type: 'button', class: 'c-button -outline -dark-text js-open-preview' %>
+        <% end %>
         <%= f.button Admin::SiteStepsController::SAVE, value: Admin::SiteStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
       <% else %>
         <% unless local_assigns[:last_step] %>
